fix weird link logo issue on mobile

--- a/src/components/Block/styles.css
+++ b/src/components/Block/styles.css
@@ -10,7 +10,11 @@
 }
 
 .link {
-  width: 15px;
+  display: flex;
+}
+
+.linkIcon {
+  width: 18px;
   margin-left: 10px;
 }
 
